--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "LaTotty <latotty@codingsnas.com>",
   "license": "MIT",
   "scripts": {
-    "start": "ts-node src/index.ts",
+    "start": "ts-node-dev --respawn --transpile-only src/index.ts",
     "test": "jest --config package.json",
     "lint": "eslint src --ext .ts"
   },
@@ -15,18 +15,24 @@
     "@types/config": "0.0.41",
     "@types/express": "4.17.13",
     "@types/jest": "24.9.0",
+    "@types/jsonwebtoken": "8.5.8",
+    "@types/lodash": "4.14.179",
     "@types/morgan": "1.9.3",
     "@types/node": "13.1.8",
     "bcrypt": "5.0.1",
     "config": "3.3.7",
     "eslint": "6.8.0",
     "jest": "24.9.0",
+    "jsonwebtoken": "8.5.1",
+    "lodash": "4.17.21",
     "mongoose": "6.2.4",
     "morgan": "1.10.0",
     "prettier": "1.19.1",
     "ts-jest": "24.3.0",
     "ts-node": "8.6.2",
-    "typescript": "3.7.5"
+    "ts-node-dev": "1.1.8",
+    "typescript": "3.7.5",
+    "zod": "3.13.2"
   },
   "jest": {
     "testEnvironment": "node",
